Closed
Bug 277852
Opened 21 years ago
Closed 21 years ago
###!!! ASSERTION: You are calling CreateInstance "{b148eed2-236d-11d3-b35c-00a0cc3c1cde}" when a service for this CID already exists!: 'Error', file r:/cenzic/mozilla/xpcom/components/nsComponentManager.cpp, line 1881
Categories
(SeaMonkey :: Download & File Handling, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: csthomas)
References
()
Details
Attachments
(1 file)
|
1.35 KB,
patch
|
timeless
:
review+
neil
:
superreview+
|
Details | Diff | Splinter Review |
This happens to be the NS_SOUND_CID.
Almost everyone calls createInstance. From my quick scan everyone except for
download manager uses createInstance.
Note that bookmarks improperly uses the Class ID instead of the Contract, that's
the next bug.
The fix is simple. Change do_GetService to do_CreateInstance.
| Assignee | ||
Updated•21 years ago
|
Assignee: download-manager → cst
| Assignee | ||
Comment 1•21 years ago
|
||
I wonder why I used getservice when I wrote the code initially (see cvs blame).
Attachment #170999 -
Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #170999 -
Flags: review?(timeless)
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Whiteboard: [cst:active, r?]
| Assignee | ||
Updated•21 years ago
|
Keywords: helpwanted
Attachment #170999 -
Flags: review?(timeless) → review+
Comment 2•21 years ago
|
||
Comment on attachment 170999 [details] [diff] [review]
patch
So why is sound not a service? The GTK implementation assumes it is :-/
Attachment #170999 -
Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
| Assignee | ||
Comment 3•21 years ago
|
||
/cvsroot/mozilla/xpfe/components/download-manager/src/nsDownloadManager.cpp,v
<-- nsDownloadManager.cpp
new revision: 1.104; previous revision: 1.103
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Whiteboard: [cst:active, r?]
You need to log in
before you can comment on or make changes to this bug.
Description
•