Bug 277852 make download manager do_CreateInstance sound for consistency r=timeless sr=neil